<resources>
    <string name="hello">Hello World, NotificatorActivity!</string>
    <string name="app_name">Notificator</string>
    <string name="login_text">Login</string>
    <string name="password">Password</string>
    <string name="login_button">Log in</string>
    <string name="login_create">Create new</string>
    <string name="login_success">Your logging in was successful!</string>
    <string name="login_failure">Something wrong with your login or password.</string>
    <string name="OK">OK</string>
    <string name="login_name">Login name</string>
    <string name="password_confirm">Confirm password</string>
    <string name="game_zone_text">Game zone</string>
    <string name="create_account">Create account</string>
    <string-array name="game_zone">
        <item>America</item><item>Asia</item>
        
        <item>Europe</item>
    </string-array>
    <string name="provide_login">Please provide login.</string>
    <string name="taken_login">This login name already taken.</string>
    <string name="provide_password">Please provide password.</string>
    <string name="incorrect_password">Password should contain at least 5 symbols.</string>
    <string name="confirm_password">Please confirm yout password.</string>
    <string name="password_mismatch">Password and it\'s confirmation mismatches.</string>
    <string name="create_success">Your account were successfully created.</string>
    <string name="loading_orders">Loading orders. Please wait...</string>
    <string name="orders_loading_error">An error occured during loading orders. Please try later.</string>
    <string name="no_orders_yet">No orders yet.</string>
    <string name="create_order">Create order</string>
    <string-array name="classes">
        <item>Barbarian</item>
        <item>Demon Hunter</item>
        <item>Monk</item>
        <item>Witch Doctor</item>
        <item>Wizard</item>
    </string-array>
    <string-array name="create_order_list">
        <item>Classes</item>
    </string-array>
    <string-array name="delimiters">
        <item>Game mode</item>
        <item>Classes</item>
        <item>Level group</item><item>Item primary type</item>
        <item>Item secondary type</item>
        <item>DPS</item>
        <item>Armor</item>
        <item>DPS / Armor</item>
        <item>Properties</item>
        <item>Buyout</item>
        <item>Name for notifications</item>
        
    </string-array>
    <string-array name="game_mode">
        <item>Hardcore</item>
        <item>Softcore</item>
    </string-array>
    <string name="cancel">Cancel</string>
    <string-array name="dialog_title">
        <item>Pick game mode</item>
        <item>Pick desired classes</item>
        <item>Pick level group</item>
        <item>Pick primary type</item>
        <item>Pick secondary type</item>
        <item>Type DPS</item>
        <item>Type Armor</item>
        <item>Pick property</item>
        <item>Type max buyout</item>
        <item>Type name to notify</item>
        <item>Do you want to create this order? This cannot be undone.</item>
    </string-array>
    <string-array name="lvl_group">
        <item>50 - 54</item>
        <item>55 - 59</item>
        <item>60 - 60</item>
    </string-array>
    <string-array name="primary_type">
        <item>1-Hand</item>
        <item>2-Hand</item>
        <item>Off-Hand</item>
        <item>Armor</item>
        <item>Follower Special</item>
    </string-array>
    <string-array name="onehand_items">
        <item>Axe</item>
        <item>Ceremonial Knife</item><item>Hand Crossbow</item><item>Dagger</item>
        
        
        <item>Fist Weapon</item>
        <item>Mace</item>
        <item>Mighty Weapon</item>
        <item>Spear</item>
        <item>Sword</item>
        <item>Wand</item>
    </string-array>
    <string-array name="twohand_items">
        <item>2-H Axe</item><item>Bow</item><item>Daibo</item><item>Crossbow</item><item>2-H Mace</item>
        <item>2-H Mighty Weapon</item><item>Polearm</item><item>Staff</item><item>2-H Sword</item>
        
        
        
        
        
        
        
    </string-array>
    <string-array name="offhand_items">
        <item>Mojo</item>
        <item>Source</item>
        <item>Quiver</item>
        <item>Shield</item>
    </string-array>
    <string-array name="armor_items">
        <item>Amulet</item>
        <item>Belt</item>
        <item>Boots</item>
        <item>Bracers</item>
        <item>Chest Armor</item>
        <item>Cloak</item>
        <item>Gloves</item>
        <item>Helm</item>
        <item>Pants</item>
        <item>Mighty Belt</item>
        <item>Ring</item>
        <item>Shoulders</item>
        <item>Spitit Stone</item>
        <item>Voodoo Mask</item>
        <item>Wizard Hat</item>
    </string-array>
    <string-array name="follower_items">
        <item>Enchantress Focus</item>
        <item>Scoundrel Token</item>
        <item>Templar Relic</item>
    </string-array>
    <string name="add_property">Add property</string>
</resources>