<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/login_relative_layout">
        <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:layout_marginTop="140dp" android:id="@+id/login_login_text" android:text="@string/login_text"></TextView>
        <EditText android:layout_height="wrap_content" android:layout_width="200dp" android:layout_below="@+id/login_login_text" android:layout_centerHorizontal="true" android:layout_marginTop="5dp" android:id="@+id/login_login_edit"></EditText>
        <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:layout_below="@+id/login_login_edit" android:layout_centerHorizontal="true" android:layout_marginTop="5dp" android:text="@string/password" android:id="@+id/login_password_text"></TextView>
        <EditText android:layout_height="wrap_content" android:inputType="textPassword" android:layout_below="@+id/login_password_text" android:layout_centerHorizontal="true" android:layout_width="200dp" android:layout_marginTop="5dp" android:id="@+id/login_password_edit">
            <requestFocus></requestFocus>
        </EditText>
        <Button android:layout_height="wrap_content" android:layout_below="@+id/login_password_edit" android:layout_centerHorizontal="true" android:layout_marginTop="5dp" android:id="@+id/login_login_button" android:layout_width="100dp" android:text="@string/login_button"></Button>
        <Button android:layout_height="wrap_content" android:layout_below="@+id/login_login_button" android:layout_centerHorizontal="true" android:layout_marginTop="5dp" android:id="@+id/login_create_button" android:layout_width="100dp" android:text="@string/login_create"></Button>
    </RelativeLayout>
    
</LinearLayout>
